[package]
name = "jqex"
version = "0.1.0"
authors = ["Abhishek Tripathi <abhishek.tripathi456@gmail.com>"]
description = "A tool to convert JSON to Elixir-style maps"
license = "MIT"
repository = "https://github.com/TwistingTwists/jqex"
edition = "2021"

[dependencies]
serde_json = "1.0"



[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
debug = false       # No debug symbols


[[bin]]
name = "jqex"
path = "src/main.rs"
