[package]
name = "jqex"
version = "0.1.0"
authors = ["Abhishek Tripathi <abhishek.tripathi456@gmail.com>"]
description = "A tool to convert JSON to Elixir-style maps"
license = "MIT"
repository = "https://github.com/TwistingTwists/jqex"
edition = "2021"

[dependencies]
serde_json = "1.0"



[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
debug = false       # No debug symbols

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[[bin]]
name = "jqex"
path = "src/main.rs"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
